--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -28,7 +28,8 @@ jobs:
                            libwxgtk-media3.0-gtk3-dev \
                            libwxgtk3.0-gtk3-dev \
                            curl \
-                           libcurl4-openssl-dev
+                           libcurl4-openssl-dev \
+                           libwxgtk*
       - name: Generate build files
         run: |
           mkdir build && cd build
