--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -25,11 +25,9 @@ jobs:
                            sqlite3 \
                            libwxsqlite3-3.0-dev \
                            libwxbase3.0-dev \
-                           libwxgtk-media3.0-gtk3-dev \
-                           libwxgtk3.0-gtk3-dev \
-                           curl \
                            libcurl4-openssl-dev \
-                           libwxgtk*
+                           libwxgtk* \
+                           liblua5.4-dev
       - name: Generate build files
         run: |
           mkdir build && cd build
