Use wx-config for flags

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -35,7 +35,9 @@ jobs:
       - name: Generate build files
         run: |
           mkdir build && cd build
-          cmake .. -GNinja -DCMAKE_BUILD_TYPE=Debug
+          cmake .. -GNinja \
+                   -DCMAKE_BUILD_TYPE=Debug \
+                   -DCMAKE_CXX_FLAGS=$(wx-config --cppflags)
       - name: Run build-wrapper
         run: |
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} ninja -C build
