--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -37,7 +37,8 @@ jobs:
           mkdir build && cd build
           cmake .. -GNinja \
                    -DCMAKE_BUILD_TYPE=Debug \
-                   -DCMAKE_CXX_FLAGS="$(wx-config --cppflags) $(wx-config --libs)"
+                   -DCMAKE_CXX_FLAGS="$(wx-config --cppflags) $(wx-config --libs)" \
+                   -DwxWidgets_CONFIG_EXECUTABLE="$(which wx-config)"
       - name: Run build-wrapper
         run: |
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} ninja -C build
